tests/valid_seq/merge_inst_bug_helper_1.m
%---------------------------------------------------------------------------%
% vim: ft=mercury ts=4 sw=4 et
%---------------------------------------------------------------------------%

:- module merge_inst_bug_helper_1.
:- interface.

:- type state.

:- implementation.
:- import_module unit.

:- type state == unit.
