tests/invalid_make_int/missing_interface_import3.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module missing_interface_import3.
:- interface.

:- type partition_id == int.
